[tool.poetry]
name = "poetry-package"
version = "0.1.0"
description = ""
authors = ["Alik Gallyamov <alik.gallyamov2202@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selene = "2.0.0rc7"
pytest = "^8.0.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
